--- a/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
+++ b/iOSDemo/iOSDemo/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dXe-FT-1Ut">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dXe-FT-1Ut">
                                 <rect key="frame" x="47" y="620" width="281" height="28"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="121" id="KiT-71-Wde"/>
                                     <constraint firstAttribute="height" constant="27" id="hw8-Cp-ai6"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="Bright" enabled="NO"/>
+                                    <segment title="Bright"/>
                                     <segment title="Bright -white"/>
                                     <segment title="Bright -blue"/>
                                 </segments>
